--- a/index.html
+++ b/index.html
@@ -40,7 +40,140 @@
     </div>
     <!-- banner section end -->
 </header>
-
+<main>
+    <!-- players section start -->
+    <section class="players">
+        <div class="container">
+            <div class="row">
+                <div class=" col-12 col-sm-12 col-md-12 col-lg-9 players-card">
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Chirstian Ronaldo</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)" disabled>select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Mohammad Salah</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Dimaria</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/4.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Nymer</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/5.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Ambeppe</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/6.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Latos Laka</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/7.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Matros matia</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/8.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Polatus Maria</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-card">
+                        <div class="card text-center text-capitalize">
+                            <img class="img-fluid" src="./img/9.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Zinedin Zidan</h5>
+                                <a href="#" class="btn btn-custom" onclick="addToCart(this)">select</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-5 col-12 col-sm-12 col-md-12 col-lg-3">
+                    <div class="player-select">
+                        <div class="card p-4 text-capitalize">
+                            <h3>Select Only 5</h3>
+                            <div class="card-body">
+                                <table class="table table-borderless">
+                                    <tbody id="player-list">
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="player-budget">
+                        <div class="card text-center py-2  text-capitalize budget-card">
+                            <h3 class="">budget</h3>
+                            <div class="card-body">
+                                <div class="per-player">
+                                    <label for="">per player</label>
+                                    <input id="per-player" type="text" class="w-50">
+                                </div>
+                                <div id="calculate-btn" class="btn btn-custom my-3">calculate</div>
+                                <p class="per-expense">players expense $<span id="total-expense">00</span></p>
+                                <div class="manager-coach">
+                                    <div class="manager">
+                                        <label for="">manager</label>
+                                        <input id="manager-field" type="text" class="w-50 mb-2">
+                                    </div>
+                                    <div class="coach">
+                                        <label for="">coach</label>
+                                        <input id="coach-field" type="text" class="w-50  ms-3">
+                                    </div>
+                                    <div id="btn-calculate-total" class="btn btn-custom my-3">calculate total</div>
+                                    <div class="total">
+                                        <p>Total</p>
+                                        <span id='totalAll'><span>$</span>00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- players section end -->
+</main>
     <!-- js file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
