--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
     </section>
     <!-- players section end -->
 </main>
+<footer>
+    <section class="text-center py-5 bg-black text-white">
+        <p>Copyright @ 2022 All Rights Reserved.</p>
+    </section>
+</footer>
     <!-- js file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
